--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-[IN PROGRESS] Allow insert find[unique], provided CryptoVerif manages to
-prove that the find is indeed unique.
-
 Improve FindCompos to exploit collisions (with non-zero probability)
 in order to prove injectivity.
 Currently, find_compos_bin works as follows:
@@ -3598,3 +3595,7 @@ When I look for an occurrence, I could exploit the ordering of
 occurrences and the field max_occ to avoid traversing the whole
 game.
 DONE 7/8/2019
+
+Allow insert find[unique], provided CryptoVerif manages to
+prove that the find is indeed unique.
+DONE 8/8/2019
