--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,8 @@ Version
   there is no ambiguity.
 - Removed a collision from DH_proba_collision and square_DH_proba_collision
   because it may not hold in case there are weak private keys.
+- Fixed bug in the display of game numbers in the Latex output
+  (thanks to Mark Wooding)
 
 Version 2.01pl1
 
