--- a/TODO
+++ b/TODO
@@ -23,6 +23,12 @@ and replace later by the real list of indices when I have it?
 Or pass the indices of M' as argument? But for that, I need to know
 to indices introduced by is_indep.
 
+plus/minus: when the mathematical result is >= max_int, make sure that
+the obtained result is at least max_int.
+Rather take as argument the direction in which we want to approximate:
+High: int_res \in [min_int, max_int] and int_res >= min(exact_res, max_int)
+Low: int_res \in [min_int, max_int] and int_res <= max(exact_res, min_int)
+
 Generalize to collisions M = f(M1...Mn) where f is data, M has status "decompos"
 wrt r, and Mi is independent of r for some i (like check_assign1, but f(M1,...Mn)
 is a term, not a pattern).
