--- a/TODO
+++ b/TODO
@@ -17,65 +17,39 @@ and replace later by the real list of indices when I have it?
 Or pass the indices of M' as argument? But for that, I need to know
 to indices introduced by is_indep.
 
-Put the basic proba functions of polynom.ml in a separate module? (to avoid confusion
-between proba fcts and polynom fcts)
+Use allowed_collisions to set "tysize_MIN_Manual_Coll_Elim" and
+set trust_size_estimates := true.
+Remove the setting trustSizeEstimates
+When !trust_size_estimates, compute the estimate for the whole
+probability (including replication bounds) and compare that to
+tysize_MIN_Manual_Coll_Elim.
+Document the recent changes of probability estimates
+Revert the converted examples Otway-Rees to their previous version
+without size<n>.
+Problem: setting tysize_MIN_Manual_Coll_Elim and trust_size_estimates
+together may lead to some strange effects when we set
+tysize_MIN_Manual_Coll_Elim and then go back to trust_size_estimates=false:
+the value of tysize_MIN_Manual_Coll_Elim is still used in is_large_term...
+===> There are two sets of parameters:
+1/when trust_size_estimates=false:
+  allowed_collisions
+  allowed_collisions_collision
+  tysize_MIN_Manual_Coll_Elim
+2/when trust_size_estimates=true:
+  tysize_MIN_Manual_Coll_Elim
+How to reflect that in the interface?
 
-Generalize to collisions M = f(M1...Mn) where f is data, M has status "decompos"
-wrt r, and Mi is independent of r for some i (like check_assign1, but f(M1,...Mn)
-is a term, not a pattern).
-That could even be more generalized:
-Pr[M = f(M1...Mn)] <= Pcoll1rand(T) * Prod_{Mi depends on r} |Ti|
-where f(T1...Tn):T. The formula above works even if all Mi depend on
-r. It also works if several Mi are independent of r.
-We just need to make sure that the resulting probability is small
-enough using the size estimate. The probability may be small enough
-even when all Mi depend on r, in case the image of f consists
-of a small subset of T.
-In case that estimate is too large, I can continue recursively
-in the Mi that depend on r: when they are of the form
-f'(...) for some f' that is "data", I can use some subterms of Mi
-instead of Mi itself.
-EVEN MORE GENERAL:
-Generalize is_indep so that it can replace some subterms (not only
-indices) that depend on r by ?. is_indep(M) returns
-- a term M' that does not depend on r
-- the number of values N that the ? variables can take in M'.
-To compute is_indep(f(M1...Mn)),
-- let T be the type of f(M1...Mn)
-- compute is_indep(Mi) = Mi', Ni
-- if \Prod Ni <= |T|, then return f(M1', ..., Mn'), \Prod Ni
-                      else return ?, |T|
-When find_compos(M1) returns Some(p, M1', ...)
-and is_indep(M2) returns (M2', n), we have
-Pr[M1 = M2] <= p * n and the eliminated collision is M1' = M2'.
-Use the size estimates to see whether "\Prod Ni < |T|" above
-and whether p * n is small enough.
-In the case of check_assign1, that's the same idea, the
-bound variables of the pattern (PatVar) being systematically
-converted into ? variables.
-  [The status of the term does not need to be Decompos]
-PROBLEM: that requires really good size estimates.
-TO DO Distinguish the estimate for the cardinal |T|
-from the one for the probability Pcoll1rand(T)/Pcoll2rand(T)
-for nonuniform types.
-    tsize: int option
-    tpcoll: int option (* Use None when it is not set *)
-If I do not trust the size estimates, I could use the following:
-In is_indep:
-- when f is [data], I know that \Prod Ni <= |T|.
-- when \Prod Ni = 1 (ie M1...Mn are really independent of r)
-  I know that \Prod Ni <= |T|.
-- otherwise, assume that \Prod Ni > |T|
-Require explicit declarations in allowed_collisions for
-p * n.
-Or better: for f(f'(...),...) return a number of value
-estimate |T|/\Prod_{subterms M indep of r} |Type(M)|.
-This estimate is always greater than the real number of values.
-If |T| simplifies in the product with p, we obtain
-1 / \Prod_{subterms M indep of r} |Type(M)|
-If one of these types is large (= larger than the size estimate
-in allowed_collisions) we eliminate the collision.
+Use log2(v) as estimate for Cst v?
+Increase the estimate by one if we add two equal estimates?
+Case Sub in Proba.order_of_magnitude?
+Case of negative values? (especially negative constants) Carry a sign?
+
+In facts.ml: Terms.get_pcoll1 b1.btype High <= -1
+or <= !Settings.tysize_MIN_Manual_Coll_Elim ? I used the latter for now.
    
+Put the basic proba functions of polynom.ml in a separate module? (to
+avoid confusion between proba fcts and polynom fcts)
+
 The dependency information computed by DepAnal2 at the definition
 of a variable x and saying that a certain term M does not depend on a certain
 variable y could also be used when x[M1...Ml] is known to be defined
@@ -4240,4 +4214,61 @@ the obtained result is at least max_int.
 Rather take as argument the direction in which we want to approximate:
 High: int_res \in [min_int, max_int] and int_res >= min(exact_res, max_int)
 Low: int_res \in [min_int, max_int] and int_res <= max(exact_res, min_int)
+DONE 13/9/2019
+
+Generalize to collisions M = f(M1...Mn) where f is data, M has status "decompos"
+wrt r, and Mi is independent of r for some i (like check_assign1, but f(M1,...Mn)
+is a term, not a pattern).
+That could even be more generalized:
+Pr[M = f(M1...Mn)] <= Pcoll1rand(T) * Prod_{Mi depends on r} |Ti|
+where f(T1...Tn):T. The formula above works even if all Mi depend on
+r. It also works if several Mi are independent of r.
+We just need to make sure that the resulting probability is small
+enough using the size estimate. The probability may be small enough
+even when all Mi depend on r, in case the image of f consists
+of a small subset of T.
+In case that estimate is too large, I can continue recursively
+in the Mi that depend on r: when they are of the form
+f'(...) for some f' that is "data", I can use some subterms of Mi
+instead of Mi itself.
+EVEN MORE GENERAL:
+Generalize is_indep so that it can replace some subterms (not only
+indices) that depend on r by ?. is_indep(M) returns
+- a term M' that does not depend on r
+- the number of values N that the ? variables can take in M'.
+To compute is_indep(f(M1...Mn)),
+- let T be the type of f(M1...Mn)
+- compute is_indep(Mi) = Mi', Ni
+- if \Prod Ni <= |T|, then return f(M1', ..., Mn'), \Prod Ni
+                      else return ?, |T|
+When find_compos(M1) returns Some(p, M1', ...)
+and is_indep(M2) returns (M2', n), we have
+Pr[M1 = M2] <= p * n and the eliminated collision is M1' = M2'.
+Use the size estimates to see whether "\Prod Ni < |T|" above
+and whether p * n is small enough.
+In the case of check_assign1, that's the same idea, the
+bound variables of the pattern (PatVar) being systematically
+converted into ? variables.
+  [The status of the term does not need to be Decompos]
+PROBLEM: that requires really good size estimates.
+Distinguish the estimate for the cardinal |T|
+from the one for the probability Pcoll1rand(T)/Pcoll2rand(T)
+for nonuniform types.
+    tsize: int option
+    tpcoll: int option (* Use None when it is not set *)
+If I do not trust the size estimates, I could use the following:
+In is_indep:
+- when f is [data], I know that \Prod Ni <= |T|.
+- when \Prod Ni = 1 (ie M1...Mn are really independent of r)
+  I know that \Prod Ni <= |T|.
+- otherwise, assume that \Prod Ni > |T|
+Require explicit declarations in allowed_collisions for
+p * n.
+Or better: for f(f'(...),...) return a number of value
+estimate |T|/\Prod_{subterms M indep of r} |Type(M)|.
+This estimate is always greater than the real number of values.
+If |T| simplifies in the product with p, we obtain
+1 / \Prod_{subterms M indep of r} |Type(M)|
+If one of these types is large (= larger than the size estimate
+in allowed_collisions) we eliminate the collision.
 DONE 13/9/2019
